# atelie

./: .gitignore  README.md  aliexpress.html  pyproject.toml
src/: 01-extrair-features-imagem.ipynb  02-search-on-aliexpress.ipynb  03-calcular_similaridade.ipynb  04-gerar_relatorio_pdf.py  crawler.py  materiais_scrapped_data.json  materiais_scrapped_data_v2.json  top_5_por_material.csv
