[project]
name = "atelie"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "parsel>=1.9.1",
    "httpx>=0.27.2",
    "selenium>=4.25.0",
    "pandas>=2.2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
